--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,24 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: auto; 
+  background-color:white; 
+}
+* { 
+  box-sizing: border-box; 
+}
+p {
+  color:navy; 
+}
+header li { 
+  list-style: none; 
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display:inline;
+  
 }
 
 code {
